# world-at-war

./: .gitignore  CMakeLists.txt  README.md
waw/: CMakeLists.txt
waw/include/: game.hpp
waw/src/: game.cpp  game.hpp  level.cpp  level.hpp  main.cpp  resources.cpp  resources.hpp  utils.cpp  utils.hpp
waw/src/gui/: buttons.cpp  buttons.hpp  frame.cpp  frame.hpp  label.cpp  label.hpp  layouts.cpp  layouts.hpp  widget.cpp  widget.hpp
world_at_war/: CMakeLists.txt
world_at_war/src/: game.cpp
